# buf-view

./: .bumpversion.toml  .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml  ty.toml
.github/workflows/: unittest.yml
src/buf_view/: __init__.py  buf_view.py
test/: conftest.py  test_get_it.py  test_get_new_size.py  test_get_view.py  test_init.py
